[package]
name = "refactoring_our_spawn_task_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = { workspace = true }
futures-lite = { workspace = true }
once_cell = { workspace = true }
flume = { workspace = true }
