[package]
name = "building_out_own_async_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = "4.4.0"
futures-lite = "1.12.0"
flume = "0.11.0"

# dependencies below are for integrating our runtime with hyper
hyper = { version = "0.14.26", features = ["http1", "http2", "client", "runtime"] }
smol = "1.3.0"
anyhow = "1.0.70"
async-native-tls = "0.5.0"
http = "0.2.9"
tokio = "1.14.0"
mio = {version = "1.0.2", features = ["net", "os-poll"]}
