[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-metrics = { version = "0.3.1", default-features = false }
once_cell = "1.18.0"
flume = "0.11.0"
