[package]
name = "data_layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
prost-types = "0.12.1"

[build-dependencies]
prost-build = "0.12.1"

[lib]
"data_layer" = ["src/lib.rs"]
